--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   text-align: center;
   font-family: 'Raleway', sans-serif;
   color: #333;
-  background: #f5f5f5;
+  background: #fff;
 }
 
 .wrapper {
@@ -30,7 +30,11 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/header.jpg') no-repeat top center ;
+  background: linear-gradient(
+              rgba(0, 0, 0, 0.5),
+              rgba(0,0, 0, 1)
+              ),
+              url(images/header.jpg);
   background-size: cover;
   color: #fff;
   overflow: hidden;
